Track Vm state while 'running' (starting, started, stopping)

This allows CrostiniManager to handle states where a VM hasn't finished
starting/stopping fully.

BUG=880165

Change-Id: Ia94bf4059c4bfbf41c3fe920873fa7c8bc2aea18
Reviewed-on: https://chromium-review.googlesource.com/1212206
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Commit-Queue: Josh Pratt <jopra@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589449}
Former-commit-id: 799e7f9f1c40439ed33c66f4a4e3adc20d452345